[package]
name = "planetarium"
version = "0.2.0"
description = "Sub-pixel precision light spot rendering library"
repository = "https://github.com/ravenexp/planetarium"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["astronomy", "simulation"]
categories = ["graphics", "science"]
readme = "README.md"

[features]
default = ["png"]

[dependencies]
libm = "0.2"
png = { version = "0.17.7", optional = true }
